--- a/example.ipynb
+++ b/example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,14 @@
     "import numpy as np\n",
     "import physics as phys\n",
     "import utilities as utils\n",
-    "import spectrum as spec"
+    "import spectrum as spec\n",
+    "\n",
+    "from scipy import integrate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +108,66 @@
    ],
    "source": [
     "np.log(spec.get_bin_bound(eng))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.6744358165e+12\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_spec_CMB = phys.CMB_spec(1.,1)\n",
+    "print(test_spec_CMB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.32320934e+12   3.29409682e+12   4.98139772e+12   5.23894085e+09]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def CMB_spec_at1eV(eng):\n",
+    "    return phys.CMB_spec(eng,1)\n",
+    "    \n",
+    "test = spec.discretize(CMB_spec_at1eV,np.array([0.1,0.2,1,40]))\n",
+    "print(test.dNdE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-120-00d4a978143a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[0])"
    ]
   },
   {
