--- a/example.ipynb
+++ b/example.ipynb
@@ -2,19 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%autoreload\n",
@@ -29,30 +40,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initial total N:  300285.187665\n",
-      "initial total eng:  29990215.9542\n",
-      "initial abscissa:  [   0.1    1.    10.   100. ]\n",
-      "initial dN/dE:  [   10.      15.2     16.7   1302.29]\n",
-      "initial N in each bin:  [  2.30258509e+00   3.49992934e+01   3.84531711e+02   2.99863354e+05]\n",
-      "initial eng in each bin:  [  2.30258509e-01   3.49992934e+01   3.84531711e+03   2.99863354e+07]\n",
-      "N_above_underflow 3.88881037928\n",
-      "eng_above_underflow 0.388881037928\n",
-      "final total N:  300285.187665\n",
-      "final total eng:  599804.319084\n",
-      "final total eng/initial total eng:  0.02\n",
-      "final abscissa:  [   0.1    1.    10.   100. ]\n",
-      "final dN/dE:  [   1501.33333333  115777.66666667    1446.98888889       0.        ]\n",
-      "final N in each bin:  [    345.69477529  266587.9293683    33318.15045284       0.        ]\n",
-      "final eng in each bin:  [  3.45694775e+01   2.66587929e+05   3.33181505e+05   0.00000000e+00]\n",
-      "N underflow:  33.4130681272\n",
-      "eng underflow:  0.315710000528\n"
+      "initial total N:  396686.697945\n",
+      "initial total eng:  90974348.553\n",
+      "initial abscissa:  [  1.00000000e-01   1.20000000e+00   3.65400000e+01   2.30122000e+02\n",
+      "   5.10000000e+02]\n",
+      "initial dN/dE:  [  1.00000000e+01   1.52000000e+01   1.67000000e+01   1.30229000e+03\n",
+      "   1.00000000e-01]\n",
+      "initial N in each bin:  [  2.48490665e+00   5.38170529e+01   1.60374079e+03   3.94986069e+05]\n",
+      "initial eng in each bin:  [  2.48490665e-01   6.45804635e+01   5.86006884e+04   9.08949842e+07]\n",
+      "**********************************************************\n",
+      "final total N:  396686.697945\n",
+      "final total eng:  90974348.553\n",
+      "final total eng/initial total eng:  1.0\n",
+      "final abscissa:  [  1.00000000e-01   5.20000000e-01   5.00000000e+00   2.10400000e+02\n",
+      "   4.01200000e+03]\n",
+      "final dN/dE:  [  1.40540352e+02   2.07092487e+01   9.11410742e+01   5.58920148e+02\n",
+      "   1.73520256e-01]\n",
+      "final N in each bin:  [  2.31703064e+01   2.10639149e+01   1.36778530e+03   3.93220603e+05]\n",
+      "final eng in each bin:  [  2.31703064e+00   1.09532358e+01   6.83892652e+03   8.27336148e+07]\n",
+      "N underflow:  1.76234514169\n",
+      "eng underflow:  0.0317222125505\n",
+      "**********************************************************\n",
+      "final total N:  396686.697945\n",
+      "final total eng:  454871.742765\n",
+      "final total eng/initial total eng:  0.005\n",
+      "final abscissa:  [  1.00000000e-01   5.20000000e-01   5.00000000e+00   2.10400000e+02\n",
+      "   4.01200000e+03]\n",
+      "final dN/dE:  [  5.92596604e+02   3.40690989e+05   3.23820051e+03   2.13885687e-01\n",
+      "   0.00000000e+00]\n",
+      "final N in each bin:  [  9.76989503e+01   3.46525656e+05   4.85967837e+04   1.50476341e+02]\n",
+      "final eng in each bin:  [  9.76989503e+00   1.80193341e+05   2.42983918e+05   3.16602221e+04]\n",
+      "N underflow:  1316.08292002\n",
+      "eng underflow:  24.4912475117\n",
+      "**********************************************************\n",
+      "final total N:  396686.697945\n",
+      "final total eng:  270648.686945\n",
+      "final total eng/initial total eng:  0.002975\n",
+      "final abscissa:  [  1.00000000e-01   5.20000000e-01   5.00000000e+00   2.10400000e+02\n",
+      "   4.01200000e+03]\n",
+      "final dN/dE:  [  1.05423022e+06   1.91455115e+05   1.77866469e+03   1.25153325e-01\n",
+      "   0.00000000e+00]\n",
+      "final N in each bin:  [  1.73806575e+05   1.94733971e+05   2.66930300e+04   8.80499049e+01]\n",
+      "final eng in each bin:  [  17380.65745918  101261.66517973  133465.14992034   18525.69999674]\n",
+      "N underflow:  1365.07196509\n",
+      "eng underflow:  15.51438929\n"
      ]
     }
    ],
@@ -60,8 +100,8 @@
     "def CMB_spec_at1eV(eng):\n",
     "    return phys.CMB_spec(eng,1)\n",
     "    \n",
-    "eng_test = np.array([0.1, 1., 10., 100.])\n",
-    "test = spec.Spectrum(eng_test, np.array([10., 15.2, 16.7, 1302.29]), 1000.)\n",
+    "eng_test = np.array([0.1, 1.2, 36.54, 230.122, 510])\n",
+    "test = spec.Spectrum(eng_test, np.array([10., 15.2, 16.7, 1302.29, 0.1]), 1000.)\n",
     "init_toteng = test.toteng()\n",
     "print('initial total N: ', test.totN())\n",
     "print('initial total eng: ', test.toteng())\n",
@@ -69,7 +109,32 @@
     "print('initial dN/dE: ', test.dNdE)\n",
     "print('initial N in each bin: ', test.totN('bin', np.array([0,1,2,3,4])))\n",
     "print('initial eng in each bin: ', test.toteng('bin', np.array([0,1,2,3,4])))\n",
-    "test.redshift(20)\n",
+    "test.rebin(np.array([0.3, 5, 50, 210.4, 3050]))\n",
+    "test.rebin(np.array([0.1, 0.52, 5, 210.4, 4012]))\n",
+    "print('**********************************************************')\n",
+    "# test.redshift(20)\n",
+    "print('final total N: ', test.totN())\n",
+    "print('final total eng: ', test.toteng())\n",
+    "print('final total eng/initial total eng: ', test.toteng()/init_toteng)\n",
+    "print('final abscissa: ', test.eng)\n",
+    "print('final dN/dE: ', test.dNdE)\n",
+    "print('final N in each bin: ', test.totN('bin', np.array([0,1,2,3,4])))\n",
+    "print('final eng in each bin: ', test.toteng('bin', np.array([0,1,2,3,4])))\n",
+    "print('N underflow: ', test.underflow['N'])\n",
+    "print('eng underflow: ', test.underflow['eng'])\n",
+    "print('**********************************************************')\n",
+    "test.redshift(5)\n",
+    "print('final total N: ', test.totN())\n",
+    "print('final total eng: ', test.toteng())\n",
+    "print('final total eng/initial total eng: ', test.toteng()/init_toteng)\n",
+    "print('final abscissa: ', test.eng)\n",
+    "print('final dN/dE: ', test.dNdE)\n",
+    "print('final N in each bin: ', test.totN('bin', np.array([0,1,2,3,4])))\n",
+    "print('final eng in each bin: ', test.toteng('bin', np.array([0,1,2,3,4])))\n",
+    "print('N underflow: ', test.underflow['N'])\n",
+    "print('eng underflow: ', test.underflow['eng'])\n",
+    "print('**********************************************************')\n",
+    "test.redshift(2.975)\n",
     "print('final total N: ', test.totN())\n",
     "print('final total eng: ', test.toteng())\n",
     "print('final total eng/initial total eng: ', test.toteng()/init_toteng)\n",
@@ -84,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -107,7 +174,9 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -144,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "eng = np.array([0.1, 2, 4.5, 10, 367, 4250])\n",
@@ -156,7 +227,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -178,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -222,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -240,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "AttributeError",
@@ -262,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -283,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -300,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -329,7 +416,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -343,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
