Spectra __getitem__ and __setitem__
Coded up __getitem__ and __setitem__ for Spectra, so that a Spectra object can now be indexed to get the corresponding Spectrum.

--- a/transfer_function.ipynb
+++ b/transfer_function.ipynb
@@ -2,21 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%autoreload\n",
@@ -36,157 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 31.          29.75607604  28.56206648  27.41596845  26.31585941\n",
-      "  25.25989399  24.24630085  23.27337973  22.3394986   21.44309094\n",
-      "  20.58265304  19.75674158  18.96397112  18.20301182  17.47258722\n",
-      "  16.77147206  16.09849025  15.45251291  14.83245642  14.23728068\n",
-      "  13.6659873   13.11761798  12.59125283  12.08600893  11.60103873\n",
-      "  11.13552873  10.68869805  10.25979715   9.84810659   9.45293576\n",
-      "   9.07362178   8.70952837   8.36004479   8.02458479   7.70258565\n",
-      "   7.39350723   7.09683108   6.81205952   6.53871487   6.27633861\n",
-      "   6.02449061   5.78274841   5.5507065    5.32797563   5.11418219\n",
-      "   4.90896755   4.71198748   4.52291154   4.34142257   4.16721613]\n",
-      "[  3.10000000e+03   3.23529524e+03   3.37649526e+03   3.52385775e+03\n",
-      "   3.67765169e+03   3.83815774e+03   4.00566886e+03   4.18049078e+03\n",
-      "   4.36294255e+03   4.55335719e+03   4.75208221e+03   4.95948031e+03\n",
-      "   5.17593001e+03   5.40182637e+03   5.63758166e+03   5.88362616e+03\n",
-      "   6.14040894e+03   6.40839866e+03   6.68808441e+03   6.97997667e+03\n",
-      "   7.28460816e+03   7.60253488e+03   7.93433707e+03   8.28062031e+03\n",
-      "   8.64201661e+03   9.01918555e+03   9.41281551e+03   9.82362491e+03\n",
-      "   1.02523635e+04   1.06998138e+04   1.11667925e+04   1.16541518e+04\n",
-      "   1.21627813e+04   1.26936092e+04   1.32476043e+04   1.38257778e+04\n",
-      "   1.44291849e+04   1.50589268e+04   1.57161530e+04   1.64020629e+04\n",
-      "   1.71179084e+04   1.78649960e+04   1.86446892e+04   1.94584111e+04\n",
-      "   2.03076467e+04   2.11939460e+04   2.21189267e+04   2.30842768e+04\n",
-      "   2.40917584e+04   2.51432101e+04   2.62405510e+04   2.73857838e+04\n",
-      "   2.85809987e+04   2.98283771e+04   3.11301956e+04   3.24888303e+04\n",
-      "   3.39067606e+04   3.53865746e+04   3.69309730e+04   3.85427746e+04\n",
-      "   4.02249211e+04   4.19804825e+04   4.38126630e+04   4.57248065e+04\n",
-      "   4.77204028e+04   4.98030942e+04   5.19766819e+04   5.42451328e+04\n",
-      "   5.66125871e+04   5.90833656e+04   6.16619780e+04   6.43531303e+04\n",
-      "   6.71617342e+04   7.00929159e+04   7.31520249e+04   7.63446445e+04\n",
-      "   7.96766017e+04   8.31539775e+04   8.67831186e+04   9.05706486e+04\n",
-      "   9.45234801e+04   9.86488275e+04   1.02954220e+05   1.07447516e+05\n",
-      "   1.12136915e+05   1.17030976e+05   1.22138633e+05   1.27469205e+05\n",
-      "   1.33032424e+05   1.38838441e+05   1.44897854e+05   1.51221722e+05\n",
-      "   1.57821586e+05   1.64709493e+05   1.71898012e+05   1.79400265e+05\n",
-      "   1.87229943e+05   1.95401336e+05   2.03929359e+05   2.12829576e+05\n",
-      "   2.22118231e+05   2.31812276e+05   2.41929404e+05   2.52488080e+05\n",
-      "   2.63507576e+05   2.75008002e+05   2.87010348e+05   2.99536521e+05\n",
-      "   3.12609381e+05   3.26252788e+05   3.40491642e+05   3.55351932e+05\n",
-      "   3.70860779e+05   3.87046488e+05   4.03938601e+05   4.21567946e+05\n",
-      "   4.39966700e+05   4.59168442e+05   4.79208218e+05   5.00122602e+05\n",
-      "   5.21949766e+05   5.44729547e+05   5.68503519e+05   5.93315074e+05\n",
-      "   6.19209496e+05   6.46234044e+05   6.74438041e+05   7.03872962e+05\n",
-      "   7.34592531e+05   7.66652813e+05   8.00112321e+05   8.35032125e+05\n",
-      "   8.71475955e+05   9.09510325e+05   9.49204654e+05   9.90631387e+05\n",
-      "   1.03386613e+06   1.07898780e+06   1.12607874e+06   1.17522490e+06\n",
-      "   1.22651598e+06   1.28004558e+06   1.33591141e+06   1.39421543e+06\n",
-      "   1.45506405e+06   1.51856832e+06   1.58484415e+06   1.65401249e+06\n",
-      "   1.72619960e+06   1.80153721e+06   1.88016282e+06   1.96221995e+06\n",
-      "   2.04785834e+06   2.13723430e+06   2.23051096e+06   2.32785854e+06\n",
-      "   2.42945473e+06   2.53548495e+06   2.64614270e+06   2.76162997e+06\n",
-      "   2.88215751e+06   3.00794532e+06   3.13922296e+06   3.27623003e+06\n",
-      "   3.41921659e+06   3.56844360e+06   3.72418342e+06   3.88672029e+06\n",
-      "   4.05635086e+06   4.23338472e+06   4.41814498e+06   4.61096885e+06\n",
-      "   4.81220825e+06   5.02223047e+06   5.24141882e+06   5.47017334e+06\n",
-      "   5.70891154e+06   5.95806914e+06   6.21810088e+06   6.48948135e+06\n",
-      "   6.77270585e+06   7.06829130e+06   7.37677716e+06   7.69872646e+06\n",
-      "   8.03472680e+06   8.38539142e+06   8.75136031e+06   9.13330140e+06\n",
-      "   9.53191180e+06   9.94791899e+06   1.03820823e+07   1.08351940e+07\n",
-      "   1.13080811e+07   1.18016068e+07   1.23166717e+07   1.28542159e+07\n",
-      "   1.34152205e+07   1.40007094e+07   1.46117511e+07   1.52494609e+07\n",
-      "   1.59150027e+07   1.66095911e+07   1.73344939e+07   1.80910341e+07\n",
-      "   1.88805924e+07   1.97046099e+07   2.05645906e+07   2.14621039e+07\n",
-      "   2.23987879e+07   2.33763522e+07   2.43965810e+07   2.54613363e+07\n",
-      "   2.65725613e+07   2.77322842e+07   2.89426217e+07   3.02057826e+07\n",
-      "   3.15240725e+07   3.28998974e+07   3.43357682e+07   3.58343056e+07\n",
-      "   3.73982447e+07   3.90304397e+07   4.07338696e+07   4.25116434e+07\n",
-      "   4.43670057e+07   4.63033427e+07   4.83241884e+07   5.04332313e+07\n",
-      "   5.26343204e+07   5.49314730e+07   5.73288816e+07   5.98309219e+07\n",
-      "   6.24421603e+07   6.51673626e+07   6.80115026e+07   7.09797712e+07\n",
-      "   7.40775858e+07   7.73106003e+07   8.06847152e+07   8.42060888e+07\n",
-      "   8.78811479e+07   9.17165998e+07   9.57194448e+07   9.98969885e+07\n",
-      "   1.04256855e+08   1.08807003e+08   1.13555735e+08   1.18511719e+08\n",
-      "   1.23684000e+08   1.29082018e+08   1.34715626e+08   1.40595104e+08\n",
-      "   1.46731184e+08   1.53135065e+08   1.59818435e+08   1.66793491e+08\n",
-      "   1.74072963e+08   1.81670139e+08   1.89598882e+08   1.97873665e+08\n",
-      "   2.06509589e+08   2.15522417e+08   2.24928596e+08   2.34745296e+08\n",
-      "   2.44990432e+08   2.55682703e+08   2.66841623e+08   2.78487559e+08\n",
-      "   2.90641766e+08   3.03326427e+08   3.16564692e+08   3.30380723e+08\n",
-      "   3.44799736e+08   3.59848047e+08   3.75553120e+08   3.91943620e+08\n",
-      "   4.09049461e+08   4.26901863e+08   4.45533408e+08   4.64978102e+08\n",
-      "   4.85271432e+08   5.06450437e+08   5.28553771e+08   5.51621774e+08\n",
-      "   5.75696549e+08   6.00822034e+08   6.27044086e+08   6.54410564e+08\n",
-      "   6.82971414e+08   7.12778763e+08   7.43887013e+08   7.76352939e+08\n",
-      "   8.10235797e+08   8.45597425e+08   8.82502363e+08   9.21017966e+08\n",
-      "   9.61214530e+08   1.00316542e+09   1.04694719e+09   1.09263977e+09\n",
-      "   1.14032653e+09   1.19009451e+09   1.24203455e+09   1.29624144e+09\n",
-      "   1.35281412e+09   1.41185584e+09   1.47347434e+09   1.53778211e+09\n",
-      "   1.60489649e+09   1.67494000e+09   1.74804045e+09   1.82433128e+09\n",
-      "   1.90395171e+09   1.98704707e+09   2.07376901e+09   2.16427580e+09\n",
-      "   2.25873265e+09   2.35731193e+09   2.46019357e+09   2.56756534e+09\n",
-      "   2.67962320e+09   2.79657168e+09   2.91862421e+09   3.04600355e+09\n",
-      "   3.17894219e+09   3.31768276e+09   3.46247846e+09   3.61359358e+09\n",
-      "   3.77130390e+09   3.93589728e+09   4.10767411e+09   4.28694791e+09\n",
-      "   4.47404586e+09   4.66930944e+09   4.87309504e+09   5.08577458e+09\n",
-      "   5.30773622e+09   5.53938508e+09   5.78114393e+09   6.03345401e+09\n",
-      "   6.29677583e+09   6.57158996e+09   6.85839797e+09   7.15772333e+09\n",
-      "   7.47011233e+09   7.79613512e+09   8.13638673e+09   8.49148815e+09\n",
-      "   8.86208749e+09   9.24886112e+09   9.65251496e+09   1.00737857e+10\n",
-      "   1.05134422e+10   1.09722870e+10   1.14511574e+10   1.19509274e+10\n",
-      "   1.24725092e+10   1.30168548e+10   1.35849575e+10   1.41778543e+10\n",
-      "   1.47966273e+10   1.54424058e+10   1.61163683e+10   1.68197451e+10\n",
-      "   1.75538198e+10   1.83199321e+10   1.91194804e+10   1.99539238e+10\n",
-      "   2.08247854e+10   2.17336546e+10   2.26821901e+10   2.36721231e+10\n",
-      "   2.47052604e+10   2.57834875e+10   2.69087724e+10   2.80831688e+10\n",
-      "   2.93088202e+10   3.05879634e+10   3.19229330e+10   3.33161656e+10\n",
-      "   3.47702038e+10   3.62877016e+10   3.78714285e+10   3.95242750e+10\n",
-      "   4.12492576e+10   4.30495248e+10   4.49283622e+10   4.68891988e+10\n",
-      "   4.89356135e+10   5.10713411e+10   5.33002797e+10   5.56264971e+10\n",
-      "   5.80542392e+10   6.05879367e+10   6.32322140e+10   6.59918971e+10\n",
-      "   6.88720228e+10   7.18778476e+10   7.50148575e+10   7.82887779e+10\n",
-      "   8.17055841e+10   8.52715120e+10   8.89930700e+10   9.28770503e+10\n",
-      "   9.69305416e+10   1.01160942e+11   1.05575972e+11   1.10183691e+11\n",
-      "   1.14992506e+11   1.20011196e+11   1.25248920e+11   1.30715237e+11\n",
-      "   1.36420124e+11   1.42373993e+11   1.48587710e+11   1.55072617e+11\n",
-      "   1.61840548e+11   1.68903857e+11   1.76275433e+11   1.83968732e+11\n",
-      "   1.91997795e+11   2.00377275e+11   2.09122466e+11   2.18249329e+11\n",
-      "   2.27774521e+11   2.37715427e+11   2.48090190e+11   2.58917746e+11\n",
-      "   2.70217855e+11   2.82011142e+11   2.94319131e+11   3.07164285e+11\n",
-      "   3.20570048e+11   3.34560888e+11   3.49162338e+11   3.64401048e+11\n",
-      "   3.80304832e+11   3.96902713e+11   4.14224987e+11   4.32303268e+11\n",
-      "   4.51170550e+11   4.70861269e+11   4.91411362e+11   5.12858336e+11\n",
-      "   5.35241333e+11   5.58601206e+11   5.82980588e+11   6.08423975e+11\n",
-      "   6.34977804e+11   6.62690537e+11   6.91612756e+11   7.21797244e+11\n",
-      "   7.53299093e+11   7.86175797e+11   8.20487360e+11   8.56296404e+11\n",
-      "   8.93668284e+11   9.32671208e+11   9.73376362e+11   1.01585804e+12\n",
-      "   1.06019376e+12   1.10646446e+12   1.15475459e+12   1.20515226e+12\n",
-      "   1.25774948e+12   1.31264223e+12   1.36993069e+12   1.42971944e+12\n",
-      "   1.49211758e+12   1.55723900e+12   1.62520256e+12   1.69613229e+12\n",
-      "   1.77015765e+12   1.84741375e+12   1.92804159e+12   2.01218831e+12\n",
-      "   2.10000751e+12   2.19165945e+12   2.28731142e+12   2.38713798e+12\n",
-      "   2.49132134e+12   2.60005164e+12   2.71352732e+12   2.83195549e+12\n",
-      "   2.95555230e+12   3.08454332e+12   3.21916397e+12   3.35965996e+12\n",
-      "   3.50628770e+12   3.65931481e+12   3.81902058e+12   3.98569649e+12\n",
-      "   4.15964674e+12   4.34118880e+12   4.53065403e+12   4.72838820e+12\n",
-      "   4.93475220e+12   5.15012268e+12   5.37489271e+12   5.60947252e+12]\n"
-     ]
-    }
-   ],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "rs = np.log(4) + (np.arange(50)+1)*(np.log(31) - np.log(4))/50\n",
     "rs = np.flipud(rs)\n",
-    "print(exp(rs))\n",
     "\n",
     "mmin = 5e3\n",
     "mmax = 1e13\n",
@@ -196,15 +56,13 @@
     "\n",
     "nengsteps = 500\n",
     "lowinjE = 3e3 + 100.\n",
-    "eng = lowinjE*np.exp((np.arange(nengsteps)*np.log(mwimpmax/lowinjE)/nengsteps))\n",
-    "print(eng)"
+    "eng = lowinjE*np.exp((np.arange(nengsteps)*np.log(mwimpmax/lowinjE)/nengsteps))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -231,10 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -250,6 +106,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.33499373e-04   1.39308620e-04   1.39308620e-04]\n",
+      " [  5.56348624e-05   5.80557455e-05   5.80557455e-05]\n",
+      " [  6.58763238e-05   6.87428516e-05   6.87428516e-05]\n",
+      " ..., \n",
+      " [  3.47320061e-14   3.47321732e-14   3.47321732e-14]\n",
+      " [  3.99016158e-12   3.99015838e-12   3.99015838e-12]\n",
+      " [  4.02928467e-13   4.02928144e-13   4.02928144e-13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "old_test0 = test[0]\n",
+    "test[0] = test[1]\n",
+    "print(np.stack([old_test0.dNdE,test[0].dNdE,test[1].dNdE],axis=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -261,7 +142,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
